[package]
name = "StackExtractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = { version = "0.45.0", features = ["Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Kernel", "Win32_System_Diagnostics_ToolHelp"] }
